fix horizontal scroll on mobile

--- a/style.css
+++ b/style.css
@@ -838,8 +838,8 @@ body {
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-  grid-auto-rows: minmax(350px, auto);
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-auto-rows: minmax(300px, auto);
   gap: 20px;
   padding: 20px;
   grid-auto-flow: dense;
